UI/UX = LOGIN PAGE + REGISTER PAGE LOGIN PAGE CODE REGISTER PAGE CODE  JAVA/XML SPLASH SCREEN LOGO APP BRAND LOGO BACK END CODING JS/SERVER GRADE BACKEND API ADDED(CHANGES NEEDED ASPER SERVER)

--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
-    tools:context=".Forget_password">
+    tools:context=".ForgetPassword">
 
     <View
         android:layout_width="match_parent"
@@ -21,54 +21,53 @@
             android:layout_height="wrap_content"
             android:src="@drawable/logo"/>
     </LinearLayout>
-        <View
+    <View
         android:layout_width="match_parent"
         android:layout_height="18dp"/>
 
-        <TextView
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-       android:text="Enter your email address"
-       android:textStyle="bold"
-       android:textSize="20dp"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Enter your email address"
+        android:textStyle="bold"
+        android:textSize="20dp"/>
 
-        <EditText
+    <EditText
+
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="20dp"
-        android:id="@+id/txt_Email" />
+        android:id="@+id/emailEditText" />
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:layout_width="224dp"
+        android:layout_height="59dp"
         android:layout_gravity="center"
-        >
-
+        android:orientation="horizontal">
 
 
         <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="Cancel"
-        android:textSize="17dp"
-        android:textStyle="bold"
-        android:id="@+id/btn_cancel"/>
+            android:id="@+id/btn_cancel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="Cancel"
+            android:textSize="17dp"
+            android:textStyle="bold" />
 
         <View
             android:layout_width="8dp"
             android:layout_height="wrap_content" />
 
         <Button
-            android:layout_width="match_parent"
+            android:id="@+id/resetButton"
+            android:layout_width="99dp"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="Search"
+            android:text="Reset"
             android:textSize="17dp"
-            android:textStyle="bold"
 
-            android:id="@+id/btn_Search"/>
+            android:textStyle="bold" />
 
         <View
             android:layout_width="8dp"
