--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -4,17 +4,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:ignore="ExtraText">
-    tools:context=".SplashActivity"
-
+    android:background="@color/black"
+    tools:context=".SplashActivity">
 
 
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:srcCompat="@drawable/logo"
-        android:backgroundTint="@color/white"
-        android:background="@color/white"
-       />
+        android:id="@+id/imageView2"
+        android:layout_width="wrap_content"
+        android:layout_height="490dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_centerInParent="true"
+        android:layout_marginStart="-12dp"
+        android:layout_marginTop="94dp"
+        android:layout_marginEnd="-6dp"
+        android:layout_marginBottom="146dp"
+        app:srcCompat="@drawable/codepreplogo" />
 </RelativeLayout>
