--- a/app/src/main/res/layout/dsa.xml
+++ b/app/src/main/res/layout/dsa.xml
@@ -45,12 +45,12 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/about_dsa"
+                android:layout_margin="10dp"
                 android:layout_marginLeft="5dp"
-                android:textSize="20dp"
                 android:justificationMode="inter_word"
-                android:textStyle="normal"
-                android:layout_margin="10dp"/>
+                android:text="@string/about_dsa"
+                android:textSize="20dp"
+                android:textStyle="normal" />
 
             <TextView
                 android:layout_width="match_parent"
