--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -122,7 +122,7 @@
         android:id="@+id/forgetpasswordbtnlgn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Forgot  your password?"
+        android:text="Forgot password?"
         android:textSize="15dp"
         app:layout_constraintBottom_toTopOf="@+id/logindbtn"
         app:layout_constraintEnd_toEndOf="@+id/Password"
