--- a/app/src/main/res/layout/landing_page.xml
+++ b/app/src/main/res/layout/landing_page.xml
@@ -13,9 +13,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="70dp"
-
         android:background="@drawable/barbag"
-        android:gravity="center||right"
+        android:gravity="center||end"
         android:orientation="horizontal">
 
 
